<resources>
    <string name="app_name">Asthma Application</string>
    <string name="main_page_title">Welcome to PNW\'s Asthma Application!</string>
    <string name="main_page_instruction">Please Select an Option to Continue</string>
    <string name="main_page_login_title">Log In</string>
    <string name="main_page_registration_title">Registration</string>
    <string name="main_page_action_login">Login</string>
    <string name="main_page_action_register">Register</string>
    <string name="registration_first_name_hint">First Name</string>
    <string name="registration_last_name_hint">Last Name</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_page_title">Registration Page</string>
    <string name="unregistered_description">Not yet registered? Sign up here!</string>
    <string name="registered_description">Already Registered? Log In Here!</string>
    <string name="login_page_title">Log In Page</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_name_hint">First Name</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="continue_as_guest">Or, Continue as Guest</string>
    <string name="you_are_signed_in">You are Logged in, Continue!</string>
    <string name="clear_cache">Clear Local Cache</string>
    <string name="login_option_title">Log In As?</string>
    <string name="patient_login_option">Patient</string>
    <string name="student_login_option">Student</string>
    <string name="successful_login">Login Successful!</string>
    <string name="failed_login_wrong_password">Invalid Password!</string>
    <string name="failed_login_user_non_existent">User Does Not Exist! Please Register!</string>
    <string name="signed_in_user">Signed In User: %s</string>
    <string name="welcome">Asthma Application App</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_name">Name: %s</string>
    <string name="my_profile_user_type">User Type: %s</string>
    <string name="my_profile_student">Student</string>
    <string name="my_profile_patient">Patient</string>
    <string name="my_profile_default">Guest/Default User</string>
    <string name="my_profile_access_type">Access: %s</string>
    <string name="my_profile_student_access">Learning, Reviews, Patients and Quizzes</string>
    <string name="my_profile_patient_access">Learning, and Patients</string>
    <string name="my_profile_default_access">Learning</string>
    <string name="welcome_user">Welcome, %s</string>
    <string name="log_out">Log Out</string>
    <string name="learning_card">Learn Here!</string>
    <string name="patient_card">Patients</string>
    <string name="student_card">Students</string>
    <string name="resources_card">Resources</string>
    <string name="returned_user">Returned User!</string>
    <string name="guest_user">Guest User!</string>
    <string name="quiz_card">Quizzes/Exams</string>
    <string name="review_card">Review</string>
    <string name="redirect_home">Home</string>
    <string name="guest_user_tip">Select an Option to Continue. For the Best Experience, Log in to Access All Available Features!</string>
    <string name="learning_page_title">Let\'s Learn!</string>
    <string name="patients_page_title">Welcome, Patient %s</string>
    <string name="quizzes_exam_page_title">Think You\'re Ready?</string>
    <string name="reviews_page_title">Let\'s Review!</string>
    <string name="learning_base_page_title">Select an Option to Continue.\nAlthough, it is best to go in Order!</string>
    <string name="section_one">Section 1:\nBasic Information</string>
    <string name="section_two">Section 2:\nDiagnosis</string>
    <string name="section_three">Section 3:\nPathophysiology</string>
    <string name="section_four">Section 4:\nStudies</string>
    <string name="section_five">Section 5:\nAvoidance</string>
    <string name="section_one_part_one">Common symptoms are coughing, shortness of breath, wheezing, and chest tightness (or pain). Asthma may lead to a medical emergency. It is important to know the signs of a severe asthma episode (or asthma attack).</string>
    <string name="guest_user_warning">You are a guest user!</string>
    <string name="guest_user_access_warning">You Need to be Signed in as: /A Student/A Patient to Access this Feature!</string>
    <string name="review_validation_warning">You Must Finish Reading/Must be Signed In/A Student to Gain Access!</string>
    <string name="patient_access_warning">You are a Patient! Access to Learning/Patients Only!</string>
    <string name="duplicate_user">User already exists!</string>
    <string name="registration_success">User registration successful!</string>
    <string name="section_one_introduction">Asthma Information</string>
    <string name="section_one_introduction_description">More than 25 million people in the U.S. have asthma. 1 It is a long-term disease that causes your airways to become swollen and inflamed, making it hard to breathe. There is no cure for asthma, but it can be managed and controlled.
    The best way to manage asthma is to avoid triggers, take medications to prevent symptoms, and prepare to treat asthma episodes if they occur. AAFA has a lot of information on our site to help you learn more about asthma. Also consider joining AAFA’s online asthma support community, a local support group, or a regional AAFA chapter if one is in your area.</string>
    <string name="section_one_title_One">What is Asthma?</string>
    <string name="section_one_description_One">A condition in which a person\'s airways become inflamed, narrow and swell, and produce extra mucus, which makes it difficult to breathe.</string>
    <string name="section_one_title_Two">What are the Symptoms of Asthma?</string>
    <string name="section_one_description_Two">Common symptoms are coughing, shortness of breath, wheezing, and chest tightness (or pain). Asthma may lead to a medical emergency. It is important to know the signs of a severe asthma episode (or asthma attack).</string>
    <string name="section_one_title_Three">How do Doctors Diagnose Asthma?</string>
    <string name="section_one_description_Three">A doctor may use a few different ways to look for asthma. These include:\n\n\u2022Taking a detailed medical history\n
        \u2022A physical exam\n
        \u2022Lung function tests\n
        \u2022Chest or sinus X-ray\n
        \u2022Blood tests to look for certain markers\n
        \nAllergy tests-The doctor will look at the results from these tests. They will then decide what type of asthma you have. They will develop a treatment plan based on the type and severity of your symptoms. If you have moderate to severe persistent asthma, AAFA recommends you see an allergist or pulmonologist if possible. Allergists treat allergies, asthma, and immune disorders. Pulmonologists treat asthma and other lung or respiratory diseases.
    </string>
    <string name="section_one_title_Four">What is the Treatment for Asthma?</string>
    <string name="section_one_description_Four">You and your doctor will come up with a plan to treat your asthma. It often involves a blend of medication and avoiding your asthma triggers. An asthma action plan is an important tool to help you know when and how to treat your asthma symptoms.</string>
    <string name="section_one_title_Five">What Triggers Asthma?</string>
    <string name="section_one_description_Five">Asthma symptoms can appear when you are exposed to a trigger. A trigger is something you are sensitive to that makes your airways become inflamed. This causes swelling, mucus production, and narrowing in your airways. Common asthma triggers are pollen, air pollution, animal allergens, scents/fragrances, certain gases, extreme weather changes, smoke, dust mites, stress, and exercise.</string>
    <string name="section_one_title_Six">How do I prevent Asthma Episodes?</string>
    <string name="section_one_description_Six">The best way to prevent an asthma episode, or attack, is to follow your treatment plan. Learn your triggers and avoid or reduce your exposure to them. Take your allergy and asthma medicines when you should. Use your quick-acting medicine as soon as you start to notice symptoms.\n
        \nMany people live healthy lives with asthma if it’s managed well. With a good treatment plan and guidance from your doctor, you can still do much of what you enjoy. For example, many professional athletes have asthma.</string>
    <string name="section_one_title_Seven">Asthma Facts and Figures</string>
    <string name="section_one_description_Seven">More people than ever before have asthma — about 25 million people in the U.S. have asthma1. It is one of the most common and costly diseases. AAFA tracks other important data such as who is most at risk of asthma, how many asthma emergency room visits happen, how many deaths from asthma happen, and how many missed school days are due to asthma.</string>
    <string name="section_one_references">Section 1 References</string>
    <string name="section_one_references_description">Centers for Disease Control: \nhttp://www.cdc.gov/asthma/default.htm. \n(Retrieved June 13, 2019)</string>
    <string name="section_two_title_one">Diagnosing Asthma</string>
    <string name="section_two_description_one">To diagnose asthma, your doctor will discuss your personal and medical history with you. They will also perform a physical exam. You may need a lung function test (also known as a pulmonary function test), which can be done easily in the clinic. You may need other tests, such as a blood tests or chest and sinus X-ray. If you or your child are having problems breathing on a regular basis, don’t wait! Visit a doctor (or other health care provider like a nurse practitioner) immediately.</string>
    <string name="section_two_title_two">How Do Doctors Diagnose Asthma?</string>
    <string name="section_two_description_two">Personal and medical history: Your doctor will ask questions to understand your symptoms and their causes. Bring notes to help you answer your doctor’s questions. Be ready to answer questions about your family history of asthma and allergies, the medicines you take, and your lifestyle. Be ready to share current physical issues, conditions, and concerns. This also includes all previous medical conditions.\n\n
        For example, if you have a history of allergies or eczema, you have a higher chance of having asthma. In addition, a family history of asthma, allergies, or eczema increases your chance of having asthma, too. This information can help your doctor make a diagnosis.\n\n
        Tell your doctor about any home or work exposure to environmental factors that can worsen asthma. For example, these might include pet dander, pollen, dust mites, mold, cockroaches, and specific foods in some people. Environmental irritants including cleaning chemicals and tobacco smoke can cause asthma.\n\n
        The doctor may also ask if you get chest symptoms when you:\n\n
        \u2022Get a head cold\n
        \u2022ExerciseUse specific medicines (such as NSAIDs)\n
        \u2022Are under increased amounts of stress</string>
    <string name="section_two_title_three">Physical Exam Diagnosis</string>
    <string name="section_two_description_three">Your doctor will do a physical exam to look for signs of asthma or other related conditions. They will look at your ears, eyes, nose, throat, skin, and listen to your chest and lungs. They will measure your height and weight to assess your overall health and use it with your lung function tests.\n\nThey will also use a device called a pulse oximeter. It goes on your finger and measures the level of oxygen in your blood. You may also need an X-ray of your lungs or sinuses.</string>
</resources>